<package>
  <name>nmea_gps_driver_mod</name>
  <description>
	Package to parse NMEA strings and publish standard ROS GPS messages. This package does not require the GPSD deamon. Edited to support ethernet messages or read from stdin (instead of serial).
  </description>
  <author>Steven Martin, Eric Perko (original). Stephen Nuske (mods)</author>
  <license>BSD</license>
  	<maintainer email="stnuske@gmail.com">Stephen Nuske</maintainer>
  	<version>0.0.0</version>
  
<buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>tf</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geographic_msgs</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>tf</run_depend>



  
</package>


